GUI setting tab add system settings page

--- a/index.html
+++ b/index.html
@@ -322,6 +322,28 @@
                   </tbody>
                 </table>
 
+                <table class="table table-borderless table-width">
+                  <thead>
+                    <tr>
+                      <th scope="col">Modal Links</th>
+                      <th scope="col"></th>
+                      <th scope="col"></th>
+
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Small Modal</td>
+                      <td><a href="small-modal.html" target="_blank">Html</a></td>
+
+                      <td>Design
+                      </td>
+                    </tr>
+
+
+                  </tbody>
+                </table>
+
 
 
 
