--- a/system-settings.html
+++ b/system-settings.html
@@ -463,6 +463,19 @@
                                 </a>
 
 
+                                <a class="nav-link" id="v-pills-gui-settings-tab" data-toggle="pill"
+                                  href="#v-pills-gui-settings" role="tab" aria-controls="v-pills-gui-settings"
+                                  aria-selected="false">
+                                  <div>
+                                    GUI Settings
+                                  </div>
+
+
+
+                                </a>
+
+
+
                                 <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
                                   href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
                                   aria-selected="false">
@@ -485,13 +498,6 @@
 
 
                                 </a>
-
-
-
-
-
-
-
 
                               </div>
                             </div>
@@ -578,8 +584,6 @@
 
 
                                 </div>
-
-
                                 <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
                                   aria-labelledby="v-pills-profile-tab">
 
@@ -614,6 +618,61 @@
                                         <div class="">
                                           <div class="form-group">
                                             <label>Domain</label>
+                                            <input type="text" class="form-control" placeholder="" />
+                                          </div>
+
+                                        </div>
+                                      </div>
+
+                                      <div class="col text-right mt-3">
+                                        <div class="">
+                                          <button type="button" class="theme-btn graydient-primary-btn">
+                                            Save
+                                          </button>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+
+                                </div>
+                                <div class="tab-pane fade" id="v-pills-gui-settings" role="tabpanel"
+                                  aria-labelledby="v-pills-gui-settings-tab">
+
+                                  <div class="inner-tab-content" style="padding:0px !important">
+                                    <div class="row m-0 ">
+                                      <div class="col-lg-6">
+                                        <div class="">
+
+                                          <div class="form-group">
+                                            <label>Refresh Data in seconds</label>
+                                            <input type="text" class="form-control" placeholder="" />
+                                          </div>
+                                          <div class="form-group">
+                                            <label>User Session Timeout in minutes</label>
+                                            <input type="text" class="form-control" placeholder="" />
+                                          </div>
+
+
+
+
+
+                                        </div>
+                                      </div>
+
+                                      <div class="col-lg-6">
+                                        <div class="">
+                                          <div class="form-group">
+                                            <label for="exampleFormControlSelect1">Default Sorted Mechanism in Default
+                                              Listing pages</label>
+                                            <select class="form-control custom-select mr-sm-2"
+                                              id="exampleFormControlSelect1">
+                                              <option> Discovered by most Adapters</option>
+                                              <option>Asset Name</option>
+                                              <option>Hostname</option>
+                                            </select>
+                                          </div>
+                                          <div class="form-group">
+                                            <label>Session Idle Timeout in minutes </label>
                                             <input type="text" class="form-control" placeholder="" />
                                           </div>
 
@@ -1055,7 +1114,6 @@
 
                     </div>
 
-
                     <!-- ENDS -- Device Detail-Executed Actions  -->
 
                     <div class="tab-pane fade" id="nav-comments" role="tabpanel" aria-labelledby="nav-contact-tab">
@@ -1278,6 +1336,10 @@
 
 
                     </div>
+
+
+
+
                   </div>
 
                 </div>
