Change password popup

--- a/index.html
+++ b/index.html
@@ -295,6 +295,12 @@
 
                       <td>Design</td>
                     </tr>
+                    <tr>
+                      <td>Change Password</td>
+                      <td><a href="change-password.html" target="_blank">Html</a></td>
+
+                      <td>Design</td>
+                    </tr>
 
 
                   </tbody>
