--- a/change-password.html
+++ b/change-password.html
@@ -56,7 +56,7 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="col-lg-4 modal-wrapper-xl mx-auto">
+            <div class="col-lg-4 modal-wrapper-xl max-small-width-modal  mx-auto">
                 <div class="modal-content">
                     <div class="modal-body">
                         <div
