--- a/change-password.html
+++ b/change-password.html
@@ -97,13 +97,15 @@
                                 </div>
                                 <div class="adapter-modal-field-row mt-3">
                                     <div class="alert alert-success" role="alert">
-                                        <!-- <h4 class="alert-heading">Well done!</h4> -->
                                         <p>Your password has been changed successfully</p>
-                                        <!-- <hr> -->
-                                        <!-- <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep
-                                            things nice and tidy.</p> -->
                                     </div>
                                 </div>
+                                <div class="adapter-modal-field-row mt-3">
+                                    <div class="alert alert-warning" role="alert">
+                                        This is a warning alert—check it out!
+                                    </div>
+                                </div>
+
 
                                 <div class="adapter-modal-bottom-row mt-3">
                                     <div style="margin: 0px;">
