--- a/change-password.html
+++ b/change-password.html
@@ -102,7 +102,7 @@
                                 </div>
                                 <div class="adapter-modal-field-row mt-3">
                                     <div class="alert alert-warning" role="alert">
-                                        This is a warning alert—check it out!
+                                        Error message goes here
                                     </div>
                                 </div>
 
