index page update

--- a/backend/index.html
+++ b/backend/index.html
@@ -295,6 +295,12 @@
 
                       <td>Design</td>
                     </tr>
+                    <tr>
+                      <td>Change Password</td>
+                      <td><a href="change-password.html" target="_blank">Html</a></td>
+
+                      <td>Design</td>
+                    </tr>
 
 
                   </tbody>
@@ -315,6 +321,28 @@
                       <td><a href="system-settings.html" target="_blank">Html</a></td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/426412622_Email-Settings" target="_blank">Design</a>
+                      </td>
+                    </tr>
+
+
+                  </tbody>
+                </table>
+
+                <table class="table table-borderless table-width">
+                  <thead>
+                    <tr>
+                      <th scope="col">Modal Links</th>
+                      <th scope="col"></th>
+                      <th scope="col"></th>
+
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Small Modal</td>
+                      <td><a href="small-modal.html" target="_blank">Html</a></td>
+
+                      <td>Design
                       </td>
                     </tr>
 
