--- a/change-password.html
+++ b/change-password.html
@@ -100,11 +100,11 @@
                                         <p>Your password has been changed successfully</p>
                                     </div>
                                 </div>
-                                <div class="adapter-modal-field-row mt-3">
-                                    <div class="alert alert-warning" role="alert">
+                                <!-- <div class="adapter-modal-field-row mt-3">
+                                    <div class="alert alert-danger" role="alert">
                                         Error message goes here
                                     </div>
-                                </div>
+                                </div> -->
 
 
                                 <div class="adapter-modal-bottom-row mt-3">
