--- a/customize-view.html
+++ b/customize-view.html
@@ -424,7 +424,7 @@
                           />
                         </div>
                         <!-- select columns dropdown -->
-                        <div class="dropdown-div">
+                        <div class="dropdown-div columns-order-div">
                           <div class="dropdwon-top columns-order-title">
                             <div>
                               <h3>Columns Order</h3>
@@ -444,7 +444,7 @@
                           <div class="dropdwon-contents-bottom">
                             <!-- <a class="select-all-btn">Select all</a> -->
                             <ul class="dropdown-connectors-list" id="scroll">
-                              <li class="active-list">
+                              <li class="">
                                 <!-- <div class="">
                                                                     <input type="checkbox" />
                                                                 </div> -->
@@ -467,9 +467,6 @@
                                   />
                                 </div>
                                 <div>Absolute</div>
-                                <div>
-                                  <img src="images/Vector.png" class="" />
-                                </div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -482,51 +479,6 @@
                                   />
                                 </div>
                                 <div>AWS</div>
-                                <div>
-                                  <img src="images/Vector.png" class="" />
-                                </div>
-                              </li>
-                              <li>
-                                <!-- <div class="">
-                                                                    <input type="checkbox" />
-                                                                </div> -->
-                                <div>
-                                  <img
-                                    src="images/absolute_adapter.png"
-                                    class="dropdwon-connector-img"
-                                  />
-                                </div>
-                                <div>Absolute</div>
-                              </li>
-                              <li>
-                                <!-- <div class="">
-                                                                    <input type="checkbox" />
-                                                                </div> -->
-                                <div>
-                                  <img
-                                    src="images/azure_logo 1.png"
-                                    class="dropdwon-connector-img"
-                                  />
-                                </div>
-                                <div>Absolute</div>
-                                <div>
-                                  <img src="images/Vector.png" class="" />
-                                </div>
-                              </li>
-                              <li>
-                                <!-- <div class="">
-                                                                    <input type="checkbox" />
-                                                                </div> -->
-                                <div>
-                                  <img
-                                    src="images/aws_logo.png"
-                                    class="dropdwon-connector-img"
-                                  />
-                                </div>
-                                <div>AWS</div>
-                                <div>
-                                  <img src="images/Vector.png" class="" />
-                                </div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -551,9 +503,6 @@
                                   />
                                 </div>
                                 <div>Absolute</div>
-                                <div>
-                                  <img src="images/Vector.png" class="" />
-                                </div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -566,9 +515,6 @@
                                   />
                                 </div>
                                 <div>AWS</div>
-                                <div>
-                                  <img src="images/Vector.png" class="" />
-                                </div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -593,9 +539,6 @@
                                   />
                                 </div>
                                 <div>Absolute</div>
-                                <div>
-                                  <img src="images/Vector.png" class="" />
-                                </div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -608,9 +551,42 @@
                                   />
                                 </div>
                                 <div>AWS</div>
+                              </li>
+                              <li>
+                                <!-- <div class="">
+                                                                    <input type="checkbox" />
+                                                                </div> -->
                                 <div>
-                                  <img src="images/Vector.png" class="" />
+                                  <img
+                                    src="images/absolute_adapter.png"
+                                    class="dropdwon-connector-img"
+                                  />
                                 </div>
+                                <div>Absolute</div>
+                              </li>
+                              <li>
+                                <!-- <div class="">
+                                                                    <input type="checkbox" />
+                                                                </div> -->
+                                <div>
+                                  <img
+                                    src="images/azure_logo 1.png"
+                                    class="dropdwon-connector-img"
+                                  />
+                                </div>
+                                <div>Absolute</div>
+                              </li>
+                              <li>
+                                <!-- <div class="">
+                                                                    <input type="checkbox" />
+                                                                </div> -->
+                                <div>
+                                  <img
+                                    src="images/aws_logo.png"
+                                    class="dropdwon-connector-img"
+                                  />
+                                </div>
+                                <div>AWS</div>
                               </li>
                             </ul>
                           </div>
