--- a/customize-view.html
+++ b/customize-view.html
@@ -134,7 +134,6 @@
                               <!-- <a class="select-all-btn">Select all</a> -->
                               <ul
                                 class="dropdown-connectors-list scroll-div-height"
-                                id="scroll"
                               >
                                 <li class="active-list">
                                   <!-- <div class="">
@@ -329,7 +328,7 @@
                                                 </div> -->
                           <div class="dropdwon-contents-bottom">
                             <!-- <a class="select-all-btn">Select all</a> -->
-                            <ul class="dropdown-connectors-list" id="scroll">
+                            <ul class="dropdown-connectors-list">
                               <li>
                                 <div class="">
                                   <input type="checkbox" />
@@ -418,9 +417,14 @@
                           </div>
                         </div>
                         <div class="move-arrow-div">
-                          <img
+                          <!-- <img
                             src="images/move-right.svg"
                             class="table-heading-arrow"
+                          /> -->
+                          <img
+                            src="images/move-right-grey.svg"
+                            class="table-heading-arrow"
+                            style="border: 0px solid #ccc"
                           />
                         </div>
                         <!-- select columns dropdown -->
@@ -443,7 +447,7 @@
                                                 </div> -->
                           <div class="dropdwon-contents-bottom">
                             <!-- <a class="select-all-btn">Select all</a> -->
-                            <ul class="dropdown-connectors-list" id="scroll">
+                            <ul class="dropdown-connectors-list">
                               <li class="">
                                 <!-- <div class="">
                                                                     <input type="checkbox" />
@@ -454,7 +458,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>Absolute</div>
+                                <div>: Column 1</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -466,7 +470,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>Absolute</div>
+                                <div>: Column 2</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -478,7 +482,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>AWS</div>
+                                <div>: Column 3</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -490,7 +494,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>Absolute</div>
+                                <div>: Column 4</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -502,7 +506,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>Absolute</div>
+                                <div>: Column 5</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -514,7 +518,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>AWS</div>
+                                <div>: Column 6</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -526,7 +530,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>Absolute</div>
+                                <div>: Column 7</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -538,7 +542,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>Absolute</div>
+                                <div>: Column 8</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -550,7 +554,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>AWS</div>
+                                <div>: Column 9</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -562,7 +566,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>Absolute</div>
+                                <div>: Column 10</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -574,7 +578,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>Absolute</div>
+                                <div>: Column 11</div>
                               </li>
                               <li>
                                 <!-- <div class="">
@@ -586,7 +590,7 @@
                                     class="dropdwon-connector-img"
                                   />
                                 </div>
-                                <div>AWS</div>
+                                <div>: Column 12</div>
                               </li>
                             </ul>
                           </div>
