--- a/device-listings-redesign.html
+++ b/device-listings-redesign.html
@@ -421,12 +421,12 @@
 
                                         <div class="search-wrap">
                                             <input type="text"
-                                                placeholder="Insert your query or start typing to filter recent Queries"
+                                                placeholder="Search by Host Name, User Name, Manufacturer Serial MAC or IP..."
                                                 class="search-field">
 
-                                            <a href="#" class="search-query-dropdown-btn">
+                                            <!-- <a href="#" class="search-query-dropdown-btn">
                                                 <img src="images/down-arrow.svg">
-                                            </a>
+                                            </a> -->
 
 
                                         </div>
@@ -438,7 +438,7 @@
                             </div>
 
                             <div class="sliding-section">
-                                <!-- <div class="sliding-left-section">
+                                <div class="sliding-left-section">
                                     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                                         aria-orientation="vertical">
                                         <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
@@ -464,7 +464,7 @@
                                         <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
                                             aria-labelledby="v-pills-settings-tab">4</div>
                                     </div>
-                                </div> -->
+                                </div>
                                 <div class="sliding-right-section">
                                     <div class="row m-0">
 
