--- a/advance-config-new.html
+++ b/advance-config-new.html
@@ -866,8 +866,11 @@
                                                             <div class="frequency-dropdown-div">
                                                                 <select class="custom-select">
                                                                     <option>Frequency (Hrs)</option>
-                                                                    <option>Daily </option>
-                                                                    <option>Every “X” Hours</option>
+                                                                    <option>01 </option>
+                                                                    <option>02</option>
+                                                                    <option>03</option>
+                                                                    <option>04</option>
+                                                                    <option>05</option>
                                                                 </select>
                                                                 <p>
                                                                     starting from:
@@ -885,23 +888,50 @@
                                                             <div class="hrs-select-group">
                                                                 <select class="custom-select">
                                                                     <option>Hr</option>
-                                                                    <option>Daily </option>
-                                                                    <option>Every “X” Hours</option>
+                                                                    <option>01</option>
+                                                                    <option>02</option>
+                                                                    <option>03</option>
+                                                                    <option>04</option>
+                                                                    <option>05</option>
+                                                                    <option>06</option>
+                                                                    <option>07</option>
+                                                                    <option>08</option>
+                                                                    <option>09</option>
+                                                                    <option>10</option>
+                                                                    <option>11</option>
+                                                                    <option>12</option>
+
                                                                 </select>
                                                                 <select class="custom-select">
                                                                     <option>Min</option>
-                                                                    <option>Daily </option>
-                                                                    <option>Every “X” Hours</option>
+                                                                    <option>01</option>
+                                                                    <option>02</option>
+                                                                    <option>03</option>
+                                                                    <option>04</option>
+                                                                    <option>05</option>
+                                                                    <option>06</option>
+                                                                    <option>07</option>
+                                                                    <option>08</option>
+                                                                    <option>09</option>
+                                                                    <option>10</option>
+                                                                    <option>11</option>
+                                                                    <option>12</option>
+                                                                    <option>13</option>
+                                                                    <option>14</option>
+                                                                    <option>15</option>
+                                                                    <option>16</option>
+                                                                    <option>17</option>
+                                                                    <option>18</option>
+                                                                    <option>19</option>
+                                                                    <option>20</option>
                                                                 </select>
                                                                 <select class="custom-select">
                                                                     <option>AM</option>
                                                                     <option>PM </option>
-                                                                    <option>Every “X” Hours</option>
                                                                 </select>
                                                                 <select class="custom-select">
                                                                     <option>UTC</option>
-                                                                    <option>Daily </option>
-                                                                    <option>Every “X” Hours</option>
+                                                                    <option>GMT </option>
                                                                 </select>
                                                             </div>
                                                             <p class="mt-4">
