device listing page ui

--- a/advance-config-new-2.html
+++ b/advance-config-new-2.html
@@ -863,7 +863,7 @@
                                                                 <option
                                                                     style="font-family: 'proxima-regular' !important;">
                                                                     Days of the Week</option>
-                                                                <option
+                                                                <option selected
                                                                     style="font-family: 'proxima-regular' !important;">
                                                                     Daily </option>
                                                                 <option>Every “X” Hours</option>
@@ -881,7 +881,7 @@
                                                                     starting from:
                                                                 </p>
                                                             </div> -->
-                                                            <div class="week-check-boxs-wrapper">
+                                                            <!-- <div class="week-check-boxs-wrapper">
                                                                 <a href="#">M</a>
                                                                 <a href="#" class="week-active">T</a>
                                                                 <a href="#">W</a>
@@ -889,7 +889,7 @@
                                                                 <a href="#">F</a>
                                                                 <a href="#">S</a>
                                                                 <a href="#">S</a>
-                                                            </div>
+                                                            </div> -->
                                                             <div class="hrs-select-group">
                                                                 <select class="custom-select">
                                                                     <option>Hr</option>
