--- a/advance-config-new-3.html
+++ b/advance-config-new-3.html
@@ -866,9 +866,9 @@
                                                                 <option
                                                                     style="font-family: 'proxima-regular' !important;">
                                                                     Daily </option>
-                                                                <option>Every “X” Hours</option>
+                                                                <option selected>Every “X” Hours</option>
                                                             </select>
-                                                            <!-- <div class="frequency-dropdown-div">
+                                                            <div class="frequency-dropdown-div">
                                                                 <select class="custom-select">
                                                                     <option>Frequency (Hrs)</option>
                                                                     <option>01 </option>
@@ -880,8 +880,8 @@
                                                                 <p>
                                                                     starting from:
                                                                 </p>
-                                                            </div> -->
-                                                            <div class="week-check-boxs-wrapper">
+                                                            </div>
+                                                            <!-- <div class="week-check-boxs-wrapper">
                                                                 <a href="#">M</a>
                                                                 <a href="#" class="week-active">T</a>
                                                                 <a href="#">W</a>
@@ -889,7 +889,7 @@
                                                                 <a href="#">F</a>
                                                                 <a href="#">S</a>
                                                                 <a href="#">S</a>
-                                                            </div>
+                                                            </div> -->
                                                             <div class="hrs-select-group">
                                                                 <select class="custom-select">
                                                                     <option>Hr</option>
