--- a/policy-center-new.html
+++ b/policy-center-new.html
@@ -388,7 +388,7 @@
                                         Policy Center &gt;
 
                                         <div class="breadcumb-flex">
-                                            <div class="page-heading-breadcrumb"> New Policy Set </div>
+                                            <div class="page-heading-breadcrumb"> > New Policy Routine </div>
 
                                         </div>
 
@@ -477,7 +477,7 @@
                                                                                     placeholder="">
                                                                             </div>
                                                                         </div>
-                                                                        <h2 class="pl-3 mb-3">Condition</h2>
+                                                                        <h2 class="pl-3 mb-3">Conditions</h2>
                                                                         <div class="gray-border-bottom mt-3">
                                                                             <div class="form-group pl-0">
                                                                                 <label>Matching Condition</label>
@@ -805,13 +805,13 @@
                                                                                             <option>GMT </option>
                                                                                         </select>
                                                                                     </div>
-                                                                                    <p class="mt-4">
+                                                                                    <!-- <p class="mt-4">
                                                                                         <input type="radio" id="male"
                                                                                             name="gender"
                                                                                             value="RunRealTime" />
                                                                                         <label for="male">Run Real
                                                                                             Time</label>
-                                                                                    </p>
+                                                                                    </p> -->
                                                                                 </div>
                                                                             </div>
 
