--- a/policy-center-new.html
+++ b/policy-center-new.html
@@ -776,7 +776,7 @@
                                                                                         style="font-family: 'proxima-regular' !important;">
                                                                                         <option
                                                                                             style="font-family: 'proxima-regular' !important;">
-                                                                                            Create Services Now Ticket
+                                                                                            Send Mail
                                                                                         </option>
                                                                                         <option
                                                                                             style="font-family: 'proxima-regular' !important;">
@@ -1184,7 +1184,7 @@
                                                                                         style="font-family: 'proxima-regular' !important;">
                                                                                         <option
                                                                                             style="font-family: 'proxima-regular' !important;">
-                                                                                            Create Services Now Ticket
+                                                                                            Disable VM
                                                                                         </option>
                                                                                         <option
                                                                                             style="font-family: 'proxima-regular' !important;">
@@ -1232,7 +1232,7 @@
                                                                                         style="font-family: 'proxima-regular' !important;">
                                                                                         <option
                                                                                             style="font-family: 'proxima-regular' !important;">
-                                                                                            Create Services Now Ticket
+                                                                                            Select Action
                                                                                         </option>
                                                                                         <option
                                                                                             style="font-family: 'proxima-regular' !important;">
