--- a/policy-center.html
+++ b/policy-center.html
@@ -551,12 +551,12 @@
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="empty-row">
+                                                            <!-- <tr class="empty-row">
                                                                 <td colspan="10"
                                                                     class="border-bottom-left border-bottom-right">
                                                                     <div class="empty-row-shadow"></div>
                                                                 </td>
-                                                            </tr>
+                                                            </tr> -->
 
                                                             <tr class="parent-row">
                                                                 <td class="border-top-left border-bottom-left">
@@ -632,12 +632,12 @@
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="empty-row">
+                                                            <!-- <tr class="empty-row">
                                                                 <td colspan="10"
                                                                     class="border-bottom-left border-bottom-right">
                                                                     <div class="empty-row-shadow"></div>
                                                                 </td>
-                                                            </tr>
+                                                            </tr> -->
 
                                                             <tr class="parent-row">
                                                                 <td class="border-top-left border-bottom-left">
@@ -712,12 +712,12 @@
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="empty-row">
+                                                            <!-- <tr class="empty-row">
                                                                 <td colspan="10"
                                                                     class="border-bottom-left border-bottom-right">
                                                                     <div class="empty-row-shadow"></div>
                                                                 </td>
-                                                            </tr>
+                                                            </tr> -->
 
                                                             <tr class="parent-row">
                                                                 <td class="border-top-left border-bottom-left">
@@ -793,12 +793,12 @@
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="empty-row">
+                                                            <!-- <tr class="empty-row">
                                                                 <td colspan="10"
                                                                     class="border-bottom-left border-bottom-right">
                                                                     <div class="empty-row-shadow"></div>
                                                                 </td>
-                                                            </tr>
+                                                            </tr> -->
 
                                                             <tr class="parent-row">
                                                                 <td class="border-top-left border-bottom-left">
@@ -873,12 +873,12 @@
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="empty-row">
+                                                            <!-- <tr class="empty-row">
                                                                 <td colspan="10"
                                                                     class="border-bottom-left border-bottom-right">
                                                                     <div class="empty-row-shadow"></div>
                                                                 </td>
-                                                            </tr>
+                                                            </tr> -->
 
                                                             <tr class="parent-row">
                                                                 <td class="border-top-left border-bottom-left">
@@ -954,12 +954,12 @@
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="empty-row">
+                                                            <!-- <tr class="empty-row">
                                                                 <td colspan="10"
                                                                     class="border-bottom-left border-bottom-right">
                                                                     <div class="empty-row-shadow"></div>
                                                                 </td>
-                                                            </tr>
+                                                            </tr> -->
 
                                                             <tr class="parent-row">
                                                                 <td class="border-top-left border-bottom-left">
@@ -1034,12 +1034,12 @@
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="empty-row">
+                                                            <!-- <tr class="empty-row">
                                                                 <td colspan="10"
                                                                     class="border-bottom-left border-bottom-right">
                                                                     <div class="empty-row-shadow"></div>
                                                                 </td>
-                                                            </tr>
+                                                            </tr> -->
 
                                                             <tr class="parent-row">
                                                                 <td class="border-top-left border-bottom-left">
@@ -1115,12 +1115,12 @@
                                                                 </td>
                                                             </tr>
 
-                                                            <tr class="empty-row">
+                                                            <!-- <tr class="empty-row">
                                                                 <td colspan="10"
                                                                     class="border-bottom-left border-bottom-right">
                                                                     <div class="empty-row-shadow"></div>
                                                                 </td>
-                                                            </tr>
+                                                            </tr> -->
 
 
 
