--- a/default-password-warning.html
+++ b/default-password-warning.html
@@ -55,7 +55,7 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="col-lg-5 modal-wrapper-xl max-small-width-modalaa  mx-auto">
+            <div class="col-lg-5 modal-wrapper-xl default-password-small-width-modal  mx-auto">
                 <div class="modal-content">
                     <div class="modal-body">
                         <div
@@ -90,7 +90,7 @@
                                 </div>
 
 
-                                <div class="checkbox-with-text-row">
+                                <div class="checkbox-with-text-row mb-4">
                                     <div><input type="radio" name="a" value="a"></div>
                                     <div class="label-div mr-3 mb-3">
                                         Change Default Password
@@ -125,7 +125,7 @@
                                 </div> -->
 
 
-                                <div class="default-password-modal-bottom-row mt-3">
+                                <div class="default-password-modal-bottom-row">
                                     <div class="checkbox-with-text-row">
                                         <div><input type="checkbox"></div>
                                         <div class="label-div">
