--- a/default-password-warning.html
+++ b/default-password-warning.html
@@ -55,7 +55,7 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="col-lg-5 modal-wrapper-xl default-password-small-width-modal  mx-auto">
+            <div class="col-lg-5 modal-wrapper-xl1 default-password-small-width-modal  mx-auto">
                 <div class="modal-content">
                     <div class="modal-body">
                         <div
@@ -82,7 +82,7 @@
 
                             <div class="adapter-modal-content-box pb-4">
 
-                                <div class="adapter-modal-field-row mt-3">
+                                <div class="adapter-modal-field-row mt-1">
                                     <div class="note-alert-mesg" >
                                         <h4 class="alert-heading">NOTE</h4>
                                         <p>Using default admin password is not recommended and is a security risk. Please Configure new password for Admin user.</p>
@@ -117,13 +117,6 @@
                                         <input type="text" class="field-large" placeholder="" />
                                     </div>
                                 </div>
-                                
-                                <!-- <div class="adapter-modal-field-row mt-3">
-                                    <div class="alert alert-danger" role="alert">
-                                        Error message goes here
-                                    </div>
-                                </div> -->
-
 
                                 <div class="default-password-modal-bottom-row">
                                     <div class="checkbox-with-text-row">
@@ -134,7 +127,7 @@
                                         
 
                                     </div>
-                                    <div style="margin: 0px;">
+                                    <div class="default-pass-btn-div">
                                         <button type="button" class="theme-btn graydient-primary-btn">
                                             Continue
                                         </button>
