Default Password Warning modal add in index file

--- a/index.html
+++ b/index.html
@@ -301,6 +301,12 @@
 
                       <td>Design</td>
                     </tr>
+                    <tr>
+                      <td>Default Password Warning</td>
+                      <td><a href="default-password-warning.html" target="_blank">Html</a></td>
+
+                      <td>Design</td>
+                    </tr>
 
 
                   </tbody>
