--- a/default-password-warning.html
+++ b/default-password-warning.html
@@ -91,11 +91,11 @@
 
 
                                 <div class="checkbox-with-text-row mb-4">
-                                    <div><input type="radio" name="a" value="a"></div>
+                                    <div><input type="radio" name="a" id="rbt_change_password" value="a" checked></div>
                                     <div class="label-div mr-3 mb-3">
                                         Change Default Password
                                     </div>
-                                    <div><input type="radio" name="a" value="b"></div>
+                                    <div><input type="radio" name="a" id="rbt_change_password" value="b"></div>
                                     <div class="label-div mr-3 mb-3">
                                         Keep Default Password
                                     </div>
@@ -108,19 +108,19 @@
                                 <div class="adapter-modal-field-row">
                                     <div class="">
                                         <label>New Password</label>
-                                        <input type="text" class="field-large" placeholder="" />
+                                        <input type="text" id="input_new_password" class="field-large" placeholder="" />
                                     </div>
                                 </div>
                                 <div class="adapter-modal-field-row mt-3">
                                     <div class="">
                                         <label>Confirm Password</label>
-                                        <input type="text" class="field-large" placeholder="" />
+                                        <input type="text" id="input_confirm_password" class="field-large" placeholder="" />
                                     </div>
                                 </div>
 
                                 <div class="default-password-modal-bottom-row">
                                     <div class="checkbox-with-text-row">
-                                        <div><input type="checkbox"></div>
+                                        <div><input type="checkbox" id="chk_do_not_show_warning_again"></div>
                                         <div class="label-div">
                                             Do not show this warning again
                                         </div>
@@ -128,7 +128,7 @@
 
                                     </div>
                                     <div class="default-pass-btn-div">
-                                        <button type="button" class="theme-btn graydient-primary-btn">
+                                        <button type="button" id="btn_continue" class="theme-btn graydient-primary-btn">
                                             Continue
                                         </button>
                                     </div>
